--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,4 @@
+# .github/workflows/release.yml
 name: Release
 
 on:
@@ -15,11 +16,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Rust
+        # Use default profile and specify targets to ensure std is installed
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          profile: minimal
+          profile: default # Use default profile
           override: true
+          targets: x86_64-unknown-linux-gnu # Explicitly add Linux target
+
 
       - name: Build (Linux x86_64)
         run: cargo build --verbose --release --target x86_64-unknown-linux-gnu
@@ -33,8 +37,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: amnezia-config-decoder-linux-x86_64
-          path: target/x86_64-unknown-linux-gnu/release/amnezia-config-decoder-linux-x86_64.tar.gz
+          name: amnezia-config-decoder-linux-x86_64 # Artifact name
+          path: target/x86_64-unknown-linux-gnu/release/amnezia-config-decoder-linux-x86_64.tar.gz # Path to packaged binary
 
   build_windows:
     name: Build Windows x86_64
@@ -44,19 +48,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Rust and add target
+      - name: Set up Rust toolchain
+        # Set up the base toolchain without adding targets here
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          profile: minimal
+          profile: default # Use default profile
           override: true
-          targets: x86_64-pc-windows-gnu # Add Windows target
+          # Do not specify targets here
+
+      - name: Add Windows GNU target
+        # Manually add the Windows GNU target using rustup
+        run: rustup target add x86_64-pc-windows-gnu
 
       - name: Install cross-compilation tools (mingw-w64 for Windows)
         run: sudo apt-get update && sudo apt-get install -y mingw-w64
 
       - name: Build (Windows x86_64)
-        run: cargo build --verbose --release --target x86_64-pc-windows-gnu
+        # Explicitly set linker for Windows target using CARGO_TARGET env var
+        run: |
+          CARGO_TARGET_X86_64_PC_WINDOWS_GNU_LINKER=x86_64-w64-mingw32-gcc cargo build --verbose --release --target x86_64-pc-windows-gnu
 
       - name: Package binary
         shell: bash
@@ -67,31 +78,32 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: amnezia-config-decoder-windows-x86_64
-          path: target/x86_64-pc-windows-gnu/release/amnezia-config-decoder-windows-x86_64.zip
+          name: amnezia-config-decoder-windows-x86_64 # Artifact name
+          path: target/x86_64-pc-windows-gnu/release/amnezia-config-decoder-windows-x86_64.zip # Path to packaged binary
 
   release:
     name: Create Release
     runs-on: ubuntu-latest
-    needs: [build_linux, build_windows]
-    if: startsWith(github.ref, 'refs/tags/')
+    needs: [build_linux, build_windows] # This job depends on the build jobs
+    if: startsWith(github.ref, 'refs/tags/') # Only create release for tags
 
     steps:
       - name: Download Linux artifact
         uses: actions/download-artifact@v4
         with:
-          name: amnezia-config-decoder-linux-x86_64
+          name: amnezia-config-decoder-linux-x86_64 # Match artifact name
 
       - name: Download Windows artifact
         uses: actions/download-artifact@v4
         with:
-          name: amnezia-config-decoder-windows-x86_64
+          name: amnezia-config-decoder-windows-x86_64 # Match artifact name
 
       - name: Create GitHub Release and upload assets
         uses: softprops/action-gh-release@v1
         with:
+          # Files path are relative to the job's workspace after download
           files: |
-            amnezia-config-decoder-linux-x86_64.tar.gz
-            amnezia-config-decoder-windows-x86_64.zip
+            amnezia-config-decoder-linux-x86_64/amnezia-config-decoder-linux-x86_64.tar.gz
+            amnezia-config-decoder-windows-x86_64/amnezia-config-decoder-windows-x86_64.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
